# gimlh

./: README.md  cabal.sandbox.config  gimlh.cabal
src/: Gimlh.hs  Script.hs
test/: GimlhHunit.hs  test_file.giml  test_file.yaml
