name:                gimlh
version:             0.1.3.0
synopsis:            Haskell parser for GIML
description:         Parser for small simple language for big data Gimlh (https://github.com/gazay/gimlh)
homepage:            https://github.com/gazay/gimlh
license:             MIT
license-file:        LICENSE
author:              Alexey Gaziev
maintainer:          alex.gaziev@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Gimlh
  build-depends:       base ==4.*, split ==0.2.*
  hs-source-dirs:      src
